[tool.poetry]
name = "soteria"
version = "1.0.1"
description = "Configuration and security methods for the merchant API framework"
authors = ["Bink <bink@bink.bink>"]
readme = "README.md"
repository = "https://git.bink.com/libs/soteria"
keywords = ["soteria", "config", "security"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "soteria" },
]

[tool.poetry.dependencies]
python = "^3.10"
hashids = ">=1.3.1"
pycryptodome = ">=3.10.1"
requests = ">=2.25.1"
PGPy = ">=0.5.3"
azure-identity = ">=1.5.0"
azure-keyvault-secrets = ">=4.2.0"
tenacity = ">=7.0.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
flake8 = "*"
black = "*"
isort = "*"
mypy = "*"
xenon = "*"
types-requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
# Default pattern forces v prefix
pattern = "^v?(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?(\\+(?P<tagged_metadata>.+))?$"

[tool.poetry-dynamic-versioning.substitution]
files = ["soteria/__init__.py"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = false
lines_between_types = 1

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests/unit"
]
