[tool.poetry]
name = "soteria"
version = "0.0.0"
description = "Configuration and security methods for the merchant API framework"
authors = ["Bink <bink@bink.bink>"]
readme = "README.md"
repository = "https://git.bink.com/libs/soteria"
keywords = ["soteria", "config", "security"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "soteria" },
]

[tool.poetry.dependencies]
python = "^3.11"
hashids = "^1.3.1"
pycryptodome = "^3.19.1"
pgpy = "^0.6.0"
azure-identity = "^1.13.0"
azure-keyvault-secrets = "^4.7.0"
tenacity = "^8.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
black = "^23.3.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.4.1"
xenon = "^0.9.0"
types-requests = "^2.31.0.1"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = ["soteria/__init__.py"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
testpaths = [
    "tests/unit"
]
